--- a/src/components/Error.module.scss
+++ b/src/components/Error.module.scss
@@ -1,9 +1,10 @@
 .error {
-	padding: 1rem;
+	padding: 1.5rem;
 	background-color: rgb(246, 197, 197);
 	border-radius: 10px;
 
 	& > .error-title {
+		font-size: 1.8rem;
 		color: #930303;
 	}
 
@@ -12,23 +13,29 @@
 	}
 
 	& > .error-confirmation {
-		display: flex;
-		justify-content: flex-end;
-		margin-top: 1.5rem;
 		padding-top: 1rem;
-		border-top: 1px solid rgb(150, 32, 32);
 
 		& > button {
+			width: 100%;
 			background-color: #690202;
 
 			&:focus {
 				outline: none;
 				box-shadow: 0 0 0 5px rgb(251, 141, 141);
+				background-color: lighten(#690202, 10);
 			}
 
 			&:hover {
 				background-color: lighten(#690202, 10);
 			}
+			@media screen and (width >= 400px) {
+				width: max-content;
+			}
+		}
+
+		@media screen and (width >= 400px) {
+			display: flex;
+			justify-content: flex-end;
 		}
 	}
 }
