--- a/src/components/Error.module.scss
+++ b/src/components/Error.module.scss
@@ -4,8 +4,11 @@
 	border-radius: 10px;
 
 	& > .error-title {
-		font-size: 1.8rem;
 		color: #930303;
+
+		@media screen and (width >= 400px) {
+			font-size: 1.8rem;
+		}
 	}
 
 	& > .error-message {
