--- a/src/index.scss
+++ b/src/index.scss
@@ -24,20 +24,21 @@
 	padding: 0;
 }
 
-body {
-	background-color: antiquewhite;
-}
-
 button {
 	padding: 0.8rem;
 	background-color: rgb(5, 5, 5);
 	color: white;
 	border: none;
-	border-radius: 5px;
+	border-radius: 20px;
 	cursor: pointer;
 	transition: background-color 150ms;
-}
 
-button:hover {
-	background-color: lighten(rgb(5, 5, 5), 10);
+	&:hover {
+		background-color: lighten(rgb(5, 5, 5), 10);
+	}
+
+	&:focus {
+		outline: none;
+		box-shadow: 0 0 0 5px rgba($color: #000000, $alpha: 0.2);
+	}
 }
