--- a/src/components/meals/Meals.module.scss
+++ b/src/components/meals/Meals.module.scss
@@ -1,6 +1,6 @@
 .meals {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 	gap: 1rem;
 	width: 90%;
 	margin: 1rem auto;
@@ -9,47 +9,9 @@
 	@media screen and (width>=400px) {
 		font-size: 1rem;
 	}
-}
 
-.meal {
-	&-card {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-		gap: 1rem;
-		padding: 1rem;
-		border-radius: 30px;
-		background-color: white;
-		box-shadow: 0 0 2px rgba($color: #ff5f3b, $alpha: 0.7);
-	}
-
-	&-img {
-		img {
-			width: 100%;
-			height: 100%;
-			border-radius: 20px;
-			object-fit: cover;
-		}
-	}
-	&-details {
-		display: grid;
-		grid-template-rows: repeat(2, max-content) 1fr;
-		gap: 1rem;
-	}
-	&-payment {
-		align-self: flex-end;
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		margin-top: auto;
-
-		& > h3 {
-			font-size: 1.6rem;
-			color: #cf4729;
-		}
-
-		& > button {
-			font-weight: 600;
-			border-radius: 20px;
-		}
+	@media screen and (width > 1100px) {
+		width: 75%;
+		margin-inline: auto;
 	}
 }
