--- a/src/components/meals/Meals.module.scss
+++ b/src/components/meals/Meals.module.scss
@@ -6,6 +6,11 @@
 	margin: 1rem auto;
 	font-size: 14px;
 
+	& > p.feedback {
+		font-size: 1.5rem;
+		text-align: center;
+	}
+
 	@media screen and (width>=400px) {
 		font-size: 1rem;
 	}
