--- a/src/components/UI/Modal.module.scss
+++ b/src/components/UI/Modal.module.scss
@@ -3,12 +3,16 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	width: min(80%, 30rem);
+	width: 95%;
 	margin-inline: auto;
 	border: none;
 	border-radius: 10px;
 	background-color: transparent;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+
+	@media screen and (width>=450px) {
+		width: min(80%, 30rem);
+	}
 
 	&::backdrop {
 		position: fixed;
@@ -16,11 +20,17 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
+		overflow: hidden;
 		background-color: rgba(0, 0, 0, 0.2);
 		backdrop-filter: blur(5px);
+		user-select: none;
 	}
 
 	&:focus {
 		outline: none;
 	}
+}
+
+.no-scroll {
+	overflow: hidden;
 }
