--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -1,16 +1,23 @@
 .cart {
+	display: grid;
+	grid-template-rows: max-content minmax(25%, 1fr) max-content;
 	max-height: 80vh;
-	padding: 1rem;
 	background-color: antiquewhite;
 	font-size: 0.8rem;
-	h2 {
+
+	> h2 {
 		font-size: 1.8rem;
 		font-weight: normal;
 		color: #cf4729;
+		padding: 1rem;
 
 		> sup {
 			font-size: 1rem;
 			color: initial;
+		}
+
+		@media screen and (width>=400px) {
+			padding: initial;
 		}
 	}
 
@@ -19,17 +26,22 @@
 		text-align: center;
 	}
 
+	// @media screen and (width>=400px) {
+	// 	font-size: 1rem;
+	// }
+
 	@media screen and (width>=400px) {
+		padding: 1rem;
 		font-size: 1rem;
 	}
-}
 
-.cart-list {
-	margin-top: 1rem;
-	list-style: none;
-}
+	&-list {
+		margin-top: 1rem;
+		padding: 0.2rem;
+		list-style: none;
+		overflow: auto;
+	}
 
-.cart {
 	&-item {
 		display: flex;
 		align-items: center;
@@ -57,6 +69,7 @@
 	&-description {
 		margin-left: 0.5rem;
 		h2 {
+			color: #cf4729;
 			font-size: clamp(0.7rem, 2.5vw, 1.5rem);
 			font-weight: bold;
 			margin-bottom: 0.7rem;
@@ -107,6 +120,68 @@
 			min-width: 15px;
 			text-align: center;
 			padding: 0.2rem;
+		}
+	}
+	&-payment {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+		margin: 1rem;
+
+		@media screen and (width>=400px) {
+			margin: initial;
+		}
+
+		@media screen and (width>=600px) {
+			flex-direction: row;
+			margin-top: 1rem;
+		}
+
+		h2.cart-price {
+			padding: 0.7rem;
+			color: #a92709;
+			font-size: clamp(0.8rem, 2.5vw, 1.5rem);
+			font-weight: 600;
+		}
+	}
+
+	&-cta {
+		width: 100%;
+
+		@media screen and (width>=400px) {
+			display: flex;
+			justify-content: space-between;
+			gap: 1rem;
+		}
+
+		@media screen and (width>=600px) {
+			width: max-content;
+		}
+
+		button {
+			width: 100%;
+			padding-block: 0.5rem;
+			font-weight: bold;
+
+			&.flat {
+				background-color: #ffcdc1;
+				color: #d43815;
+
+				&:hover {
+					background-color: darken(#ffcdc1, 10%);
+				}
+			}
+
+			@media screen and (width<=400px) {
+				&:first-of-type {
+					margin-bottom: 0.5rem;
+				}
+			}
+
+			@media screen and (width>=600px) {
+				width: max-content;
+			}
 		}
 	}
 }
