--- a/src/components/UI/Modal.module.scss
+++ b/src/components/UI/Modal.module.scss
@@ -2,13 +2,14 @@
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -60%);
 	width: 95%;
 	margin-inline: auto;
 	border: none;
 	border-radius: 10px;
 	background-color: transparent;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+	animation: fade-slide-down ease 250ms 1 forwards;
 
 	@media screen and (width>=450px) {
 		width: min(80%, 30rem);
@@ -34,4 +35,15 @@
 
 .no-scroll {
 	overflow: hidden;
+}
+
+@keyframes fade-slide-down {
+	from{
+		opacity: 0;
+	}
+
+	to{
+		opacity: 1;
+		transform: translate(-50%,-50%);
+	}
 }
