--- a/src/components/UI/Modal.module.scss
+++ b/src/components/UI/Modal.module.scss
@@ -10,12 +10,10 @@
 	border-radius: 10px;
 	background-color: transparent;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-	//will-change: translate, opacity;
-	//animation: fade-slide-down ease 250ms 1 forwards;
-	//backface-visibility: hidden;
+	animation: fade-slide-down ease 250ms 1 forwards;
 
 	@media screen and (width>=450px) {
-		width: min(80%, 40rem);
+		width: min(80%, 30rem);
 		margin-inline: initial;
 	}
 
