--- a/src/index.scss
+++ b/src/index.scss
@@ -43,4 +43,9 @@ button {
 		outline: none;
 		box-shadow: 0 0 0 5px rgba($color: #000000, $alpha: 0.2);
 	}
+
+	&:disabled{
+		opacity: 0.5;
+		cursor: not-allowed;
+	}
 }
